# Seidr-Smidja

./: .gitignore  LEGAL-NOTICE.md  MYTHIC_ENGINEERING.md  NOTICE  README.md  TASK_brunarhond_v0_1.md  TASK_seidr_smidja_genesis.md  pyproject.toml
.github/workflows/: ci.yml
config/: README.md  defaults.yaml
data/: README.md
data/annall/: runs.sqlite
data/gate/: vrchat_rules.yaml  vtube_rules.yaml
data/hoard/: catalog.yaml
data/loom/: known_blendshapes.yaml
docs/: ARCHITECTURE.md  AUDIT_GENESIS.md  DATA_FLOW.md  DEVLOG.md  DOMAIN_MAP.md  HARDENING_AUDIT_2026-05-06.md  HARDENING_VERIFICATION_2026-05-06.md  MYSTIC_ENGINEERING_PLAN.md  PHILOSOPHY.md  REPO_OVERVIEW.md  SYSTEM_VISION.md
docs/DECISIONS/: D-001-project-name-and-path-b.md  D-002-repo-and-branch.md  D-003-shared-blender-runner-location.md  D-004-hoard-v0_1-local-only.md  D-005-annall-port-injection-pattern.md  D-006-oracle-eye-render-failure-behavior.md  D-007-blender-subprocess-pattern-v0_1.md  D-008-cli-command-name-inspect.md  D-009-list-assets-and-bootstrap-hoard-cli.md  D-010-brunhand-feature-genesis.md  README.md
docs/features/brunhand/: ARCHITECTURE.md  AUDIT_BRUNHAND_2026-05-06.md  DATA_FLOW.md  PHILOSOPHY_ADDENDUM.md  README.md  TAILSCALE.md  VISION.md
examples/: spec_full.yaml  spec_minimal.yaml  spec_runa_gridweaver.yaml
logs/: CRITICAL_FACTS.md  EVENT_LOG.md  KNOWLEDGE_COMPENDIUM.md  PROJECT_STATUS.md  SAGA_AND_MEMORY.md  THREAD_SAFETY_FIX.md
scripts/: fix_memory_thread_safety.py
src/seidr_smidja/: __init__.py  config.py
src/seidr_smidja/_internal/: __init__.py  blender_runner.py
src/seidr_smidja/annall/: INTERFACE.md  README.md  __init__.py  factory.py  port.py
src/seidr_smidja/annall/adapters/: __init__.py  file.py  null.py  sqlite.py
src/seidr_smidja/bridges/: INTERFACE.md  INTERFACE_AMENDMENT_2026-05-06.md  INTERFACE_AMENDMENT_v0_1_1_pending.md  README.md  __init__.py
src/seidr_smidja/bridges/core/: INTERFACE.md  INTERFACE_AMENDMENT_2026-05-06.md  README.md  __init__.py  dispatch.py
src/seidr_smidja/bridges/mjoll/: __init__.py  server.py
src/seidr_smidja/bridges/runstafr/: __init__.py  cli.py
src/seidr_smidja/bridges/skills/: __init__.py
src/seidr_smidja/bridges/straumur/: __init__.py  api.py
src/seidr_smidja/brunhand/: INTERFACE.md  INTERFACE_AMENDMENT_2026-05-06.md  __init__.py  exceptions.py  models.py
src/seidr_smidja/brunhand/client/: INTERFACE.md  __init__.py  client.py  factory.py  oracle_channel.py  session.py
src/seidr_smidja/brunhand/daemon/: INTERFACE.md  __init__.py  __main__.py  app.py  auth.py  config.py  (+2 more)
src/seidr_smidja/forge/: INTERFACE.md  README.md  __init__.py  exceptions.py  runner.py
src/seidr_smidja/gate/: INTERFACE.md  README.md  __init__.py  gate.py  models.py  vrm_reader.py
src/seidr_smidja/hoard/: INTERFACE.md  INTERFACE_AMENDMENT_2026-05-06.md  README.md  __init__.py  bootstrap.py  exceptions.py  local.py  port.py
src/seidr_smidja/loom/: INTERFACE.md  INTERFACE_AMENDMENT_2026-05-06.md  README.md  __init__.py  exceptions.py  loader.py  schema.py  validator.py
src/seidr_smidja/oracle_eye/: INTERFACE.md  README.md  __init__.py  eye.py
tests/: __init__.py  conftest.py  test_config_hardening.py  test_dispatch_smoke.py  test_hardening_h001_h002_h006.py  test_hardening_h017_forge_oracle_nobler.py
tests/_internal/: test_blender_runner.py
tests/annall/: __init__.py  test_adapters.py  test_factory_hardening.py
tests/bridges/: __init__.py  test_dispatch.py  test_mjoll_server.py  test_runstafr_cli.py  test_straumur_api.py
tests/brunhand/: __init__.py  conftest.py  test_app_middleware.py  test_bridge_routing.py  test_brunhand_init.py  test_client.py  test_concurrency_lock.py  test_daemon_auth.py  test_daemon_capabilities.py  test_daemon_config.py  test_daemon_endpoints.py  test_daemon_main.py  test_dispatch.py  test_exceptions.py  test_factory.py  test_models.py  test_oracle_channel.py  test_path_security.py  test_runtime_shims.py  test_session.py  test_vroid_real_export.py
tests/gate/: __init__.py  test_audit_008_unevaluated_rules.py  test_gate.py  test_vrm_reader.py
tests/hoard/: __init__.py  test_audit_005_annall.py  test_bootstrap_hardening.py  test_hardening_h003_h013.py  test_local.py
tests/loom/: __init__.py  test_audit_005_annall.py  test_loader.py  test_schema.py  test_validator_wiring.py
tools/: bootstrap_hoard.py  brunhand_daemon.py  verify_brunhand.py  verify_install.py
(+10 files in other folders)
