[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seidr-smidja"
version = "0.1.0.dev0"
description = "An agent-only VRM avatar smithy — a headless programmatic forge for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Volmarr Wyrd", email = "volmarrwyrd@gmail.com" },
]
keywords = ["vrm", "avatar", "blender", "mcp", "ai-agent", "vtuber", "vrchat"]

dependencies = [
    # Spec layer (Loom)
    "pydantic>=2.0",
    "pyyaml>=6.0",
    # CLI Bridge (Rúnstafr)
    "click>=8.1",
    # REST Bridge (Straumur)
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    # MCP Bridge (Mjöll)
    "mcp>=1.0",
    # Brúarhönd — Hengilherðir client (forge-side; no GUI deps required here)
    # D-010: promoted from [dev] to base so the client is always available.
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "respx>=0.21",  # httpx mocking for Brúarhönd client tests
]
# Brúarhönd — daemon-side GUI automation dependencies.
# Install on the VRoid Studio host machine, not the forge.
brunhand-daemon = [
    "pyautogui>=0.9.54",
    "mss>=9.0.0",
    "pygetwindow>=0.0.9",
]
# Brúarhönd — Windows-only accessibility library (pywinauto).
# Install on Windows VRoid hosts that require accessibility-tree primitives.
brunhand-win = [
    "pywinauto>=0.6.8 ; sys_platform == 'win32'",
]
# Brúarhönd — macOS-only accessibility library (pyobjc Quartz framework).
# Install on macOS VRoid hosts. Requires Accessibility permission grant in System Preferences.
brunhand-mac = [
    "pyobjc-framework-Quartz>=10.0 ; sys_platform == 'darwin'",
]
# Brúarhönd — Linux-only accessibility library (pyatspi / AT-SPI).
# Install on Linux VRoid hosts running X11 sessions (Wayland not supported in v0.1).
brunhand-linux = [
    "pyatspi>=2.38.0 ; sys_platform == 'linux'",
]

[project.scripts]
seidr = "seidr_smidja.bridges.runstafr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "requires_blender: marks tests that require a live Blender installation (deselect with -m 'not requires_blender')",
    "requires_vroid_host: marks tests that require a live VRoid Studio session on a reachable Brúarhönd daemon (deselect with -m 'not requires_vroid_host')",
]
addopts = "-m 'not requires_blender and not requires_vroid_host'"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
